pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/pr13365-variation-2.rkt
#;
(exn-pred #rx"expected: String\n  given:")
#lang typed/racket

(: f (All (a ...) (a ... a -> (Values String a ... a))))
(define (f . x) x)
